--- a/src/templates/partials/table.hbs
+++ b/src/templates/partials/table.hbs
@@ -1,279 +1,319 @@
 <table class="responsive">
-		<thead>
+	<thead>
 		<tr>
-				<th valign="top">
-				<p align="center"><strong>Course Title</strong></p>
-				</th>
-		<th valign="top" >
-				<p align="center"><strong>Status</strong></p>
-				</th>
-				<th valign="top" >
-				<p align="center"><strong>Semester<br>
-					Credits</strong></p>
-					</th>
-					<th valign="top" >
-					<p align="center"><strong>Course No.</strong></p>
-					</th>
-					<th valign="top">
-					<p align="center"><strong>Bethel Course Equivalent</strong></p>
-					</th>
-			</tr>
-			</thead>
-				<tbody>
-					<tr>
-						<td valign="top" >
-							<p align="center">&nbsp;YL Core</p>
-						</td>
-						<td valign="top">
-							<p>Introduction to Youth Ministry</p>
-						</td>
-						<td valign="top" >
-							<p align="center">&nbsp;3</p>
-						</td>
-						<td valign="top" >
-							<p align="center">&nbsp;DC635YL*</p>
-						</td>
-						<td valign="top">
-							<p>DC Elective</p>
-						</td>
-					</tr>
-			<tr>
-				<td valign="top" >
-					<p align="center">&nbsp;YL Core</p>
-				</td>
-				<td valign="top">
-					<p>Leadership I:&nbsp; Foundations for Incarnational Youth Ministry</p>
-				</td>
-				<td valign="top" >
-					<p align="center">&nbsp;3</p>
-				</td>
-				<td valign="top" >
-					<p align="center">ML612YL*</p>
-				</td>
-				<td valign="top">
-					<p>Leadership I/<br>
-						SP or ML Elective</p>
-					</td>
-				</tr>
-				<tr>
-					<td valign="top" >
-						<p align="center">&nbsp;YL Core</p>
-					</td>
-					<td valign="top">
-						<p>Leadership II: Incarnational Discipleship of Young People</p>
-					</td>
-					<td valign="top" >
-						<p align="center">3</p>
-					</td>
-					<td valign="top" >
-						<p align="center">ML613YL*</p>
-					</td>
-					<td valign="top">
-						<p>Leadership II/<br>
-							ML Elective</p>
-						</td>
-					</tr>
-					<tr>
-						<td valign="top" >
-							<p align="center">&nbsp;YL Core</p>
-						</td>
-						<td valign="top">
-							<p>The Minister as Person</p>
-						</td>
-						<td valign="top" >
-							<p align="center">3</p>
-						</td>
-						<td valign="top" >
-							<p align="center">PC607YL*</p>
-						</td>
-						<td valign="top">
-							<p>PC Elective</p>
-						</td>
-					</tr>
-					<tr>
-						<td valign="top" >
-							<p align="center">&nbsp;YL Core</p>
-						</td>
-						<td valign="top">
-							<p>Systematic Theology I: Theology and Anthropology</p>
-						</td>
-						<td valign="top" >
-							<p align="center">3</p>
-						</td>
-						<td valign="top" >
-							<p align="center">TS512YL</p>
-						</td>
-						<td valign="top">
-							<p>Systematic Theology I/<br>
-								TS512</p>
-							</td>
-						</tr>
-						<tr>
-							<td valign="top" >
-								<p align="center">YL Core</p>
-							</td>
-							<td valign="top">
-								<p>Gospels and Acts</p>
-							</td>
-							<td valign="top" >
-								<p align="center">3</p>
-							</td>
-							<td valign="top" >
-								<p align="center">NT516YL</p>
-							</td>
-							<td valign="top">
-								<p>NT516</p>
-							</td>
-						</tr>
-						<tr>
-							<td valign="top" >
-								<p align="center">Cont. Ed.</p>
-							</td>
-							<td valign="top">
-								<p>Youth Ministry Leadership and Community Development</p>
-							</td>
-							<td valign="top" >
-								<p align="center">3</p>
-							</td>
-							<td valign="top" >
-								<p align="center">DC637YL</p>
-							</td>
-							<td valign="top">
-								<p>DC Elective</p>
-							</td>
-						</tr>
-						<tr>
-							<td valign="top" >
-								<p align="center">&nbsp;Cont. Ed.</p>
-							</td>
-							<td valign="top">
-								<p>The Kingdom of God and Cultural Intelligence</p>
-							</td>
-							<td valign="top" >
-								<p align="center">3</p>
-							</td>
-							<td valign="top" >
-								<p align="center">GC618YL</p>
-							</td>
-							<td valign="top">
-								<p>GC Elective</p>
-							</td>
-						</tr>
-						<tr>
-							<td valign="top" >
-								<p align="center">&nbsp;Cont. Ed.</p>
-							</td>
-							<td valign="top">
-								<p>Equipping Leaders who Volunteer</p>
-							</td>
-							<td valign="top" >
-								<p align="center">3</p>
-							</td>
-							<td valign="top" >
-								<p align="center">ML620YL</p>
-							</td>
-							<td valign="top">
-								<p>DC Elective</p>
-							</td>
-						</tr>
-						<tr>
-							<td valign="top" >
-								<p align="center">Cont. Ed.</p>
-							</td>
-							<td valign="top">
-								<p>Supervision and Organizational Leadership</p>
-							</td>
-							<td valign="top" >
-								<p align="center">3</p>
-							</td>
-							<td valign="top" >
-								<p align="center">ML615YL</p>
-							</td>
-							<td valign="top">
-								<p>ML Elective</p>
-							</td>
-						</tr>
-						<tr>
-							<td valign="top" >
-								<p align="center">Cont. Ed.</p>
-							</td>
-							<td valign="top">
-								<p>Old Testament Introduction</p>
-							</td>
-							<td valign="top" >
-								<p align="center">3</p>
-							</td>
-							<td valign="top" >
-								<p align="center">OT516YL</p>
-							</td>
-							<td valign="top">
-								<p>OT Elective</p>
-							</td>
-						</tr>
-						<tr>
-							<td valign="top" >
-								<p align="center">Cont. Ed.</p>
-							</td>
-							<td valign="top">
-								<p>Christology, Soteriology, Pneumatology&nbsp;</p>
-							</td>
-							<td valign="top" >
-								<p align="center">3</p>
-							</td>
-							<td valign="top" >
-								<p align="center">TS613YL</p>
-							</td>
-							<td valign="top">
-								<p>TS Elective</p>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-
-<table border="0" class="responsive">
-	<thead class="cf">
-		<tr>
-			<th scope="col">
-			</th><th scope="col">Direct Unsubsidized Loans</th>
-			<th scope="col">Direct PLUS Loans</th>
-			<th scope="col">Private Loans</th>
+			<th>Course Title</th>
+			<th>Status</th>
+			<th>Semester Credits</th>
+			<th>Course No.</th>
+			<th>Bethel Course Equivalent</th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr>
-		<td>Fees</th>
-			<td>
-				<p>1.051% (after 7/1/2013)</p>
-			</td>
-			<td>
-				<p>4.204% (after 7/1/2013)</p>
-			</td>
-			<td>Varies</td>
+			<td>Introduction to Youth Ministry</td>
+			<td>YL Core</td>
+			<td>3</td>
+			<td>DC635YL*</td>
+			<td>DC Elective</td>
 		</tr>
 		<tr>
-		<td>Make payments while in school?</th>
+			<td>Leadership I: Foundations for Incarnational Youth Ministry</td>
+			<td>YL Core</td>
+			<td>3</td>
+			<td>ML612YL*</td>
+			<td>Leadership I/<br /> SP or ML Elective</td>
+		</tr>
+		<tr>
+			<td>Leadership II: Incarnational Discipleship of Young People</td>
+			<td>YL Core</td>
+			<td>3</td>
+			<td>ML613YL*</td>
+			<td>Leadership II/<br /> ML Elective</td>
+		</tr>
+		<tr>
+			<td>The Minister as Person</td>
+			<td>YL Core</td>
+			<td>3</td>
+			<td>PC607YL*</td>
+			<td>PC Elective</td>
+		</tr>
+		<tr>
+			<td>Systematic Theology I: Theology and Anthropology</td>
+			<td>YL Core</td>
+			<td>3</td>
+			<td>TS512YL</td>
+			<td>Systematic Theology I/<br /> TS512</td>
+		</tr>
+		<tr>
+			<td>Gospels and Acts</td>
+			<td>YL Core</td>
+			<td>3</td>
+			<td>NT516YL</td>
+			<td>NT516</td>
+		</tr>
+		<tr>
+			<td>Youth Ministry Leadership and Community Development</td>
+			<td>Cont. Ed.</td>
+			<td>3</td>
+			<td>DC637YL</td>
+			<td>DC Elective</td>
+		</tr>
+		<tr>
+			<td>The Kingdom of God and Cultural Intelligence</td>
+			<td>Cont. Ed.</td>
+			<td>3</td>
+			<td>GC618YL</td>
+			<td>GC Elective</td>
+		</tr>
+		<tr>
+			<td>Equipping Leaders who Volunteer</td>
+			<td>Cont. Ed.</td>
+			<td>3</td>
+			<td>ML620YL</td>
+			<td>DC Elective</td>
+		</tr>
+		<tr>
+			<td>Supervision and Organizational Leadership</td>
+			<td>Cont. Ed.</td>
+			<td>3</td>
+			<td>ML615YL</td>
+			<td>ML Elective</td>
+		</tr>
+		<tr>
+			<td>Old Testament Introduction</td>
+			<td>Cont. Ed.</td>
+			<td>3</td>
+			<td>OT516YL</td>
+			<td>OT Elective</td>
+		</tr>
+		<tr>
+			<td>Christology, Soteriology, Pneumatology</td>
+			<td>Cont. Ed.</td>
+			<td>3</td>
+			<td>TS613YL</td>
+			<td>TS Elective</td>
+		</tr>
+	</tbody>
+</table>
+
+<table border="0" class="responsive mb2">
+	<caption>Loan Information</caption>
+	<thead>
+		<tr>
+			<th>Loan Type</th>
+			<th>Fees</th>
+			<th>Make payments while in school?</th>
+			<th>Interest rate</th>
+			<th>Repayment</th>
+			<th>More info</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Direct Unsubsidized Loans</td>
+			<td>1.051% (after 7/1/2013)</td>
 			<td>Interest accrues. Optional in-school payment.</td>
-			<td>Yes</td>
-			<td>Yes</td>
-		</tr>
-		<tr>
-		<td>Interest rate</th>
 			<td>5.41% fixed (first disbursed 7/1/2013 - 6/30/2014)</td>
-			<td>6.41% fixed (first disbursed 7/1/2013 - 6/30/2014)</td>
-			<td>Varies</td>
+			<td>10 years</td>
+			<td><a href="https://www.bethel.edu/seminary/financial-aid/types/loans/index#unsub">Unsubsidized Loans</a></td>
+
 		</tr>
 		<tr>
-		<td>Repayment</th>
+			<td>Direct PLUS Loans</td>
+			<td>4.204% (after 7/1/2013)</td>
+			<td>Yes</td>
+			<td>6.41% fixed (first disbursed 7/1/2013 - 6/30/2014)</td>
 			<td>10 years</td>
-			<td>10 years</td>
-			<td>Varies (10+<br>
-				years)</td>
-			</tr>
-			<tr>
-			<td>More info</th>
-				<td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#unsub">Unsubsidized Loans</a></td>
-				<td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#grad-plus">PLUS Loans</a></td>
-				<td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#private">Private Loans</a></td>
-			</tr>
-		</tbody>
-	</table>
+			<td><a href="https://www.bethel.edu/seminary/financial-aid/types/loans/index#grad-plus">PLUS Loans</a></td>
+
+		</tr>
+		<tr>
+			<td>Private Loans</td>
+			<td>Varies</td>
+			<td>Yes</td>
+			<td>Varies</td>
+			<td>Varies (10+ years)</td>
+			<td><a href="https://www.bethel.edu/seminary/financial-aid/types/loans/index#private">Private Loans</a></td>
+
+		</tr>
+	</tbody>
+</table>
+
+
+
+<table border="0" class="responsive mb2">
+<caption>Flex dollars</captions>
+<thead>
+{{!--     <tr>
+      
+      <td align="center" colspan="3"><strong>Flex (Included)</strong></td>
+      <td align="center" colspan="3"><strong>Cost/Semester</strong></td>
+    </tr>
+ --}}    <tr>
+      <th align="center"><strong>Meals</strong></th>
+      <th>Fall</th>
+      <th>Interim</th>
+      <th>Spring</th>
+{{!--       <th>Fall</th>
+      <th>Interim</th>
+      <th>Spring</th> --}}
+    </tr>
+    </thead>
+  <tbody>
+    <tr>
+      <td>20/week</td>
+      <td>$50</td>
+      <td>$10</td>
+      <td>$45</td>
+    </tr>
+    <tr>
+      <td>15/week</td>
+      <td>$150</td>
+      <td>$20</td>
+      <td>$130</td>
+{{!--       <td>$1,940</td>
+      <td>$365</td>
+      <td>$1,875</td> --}}
+    </tr>
+    <tr>
+      <td>125/Semester</td>
+      <td>$150</td>
+      <td>$20</td>
+      <td>$150</td>
+{{!--       <td>$1,795</td>
+      <td>$340</td>
+      <td>$1,795</td> --}}
+    </tr>
+    <tr>
+      <td>10/week</td>
+      <td>$225</td>
+      <td>$40</td>
+      <td>$200</td>
+{{!--       <td>$1,770</td>
+      <td>$325</td>
+      <td>$1,710</td> --}}
+    </tr>
+    <tr>
+      <td>6/week</td>
+      <td>$540</td>
+      <td>$100</td>
+      <td>$520</td>
+{{!--       <td>$1,665</td>
+      <td>$290</td>
+      <td>$1,620</td> --}}
+    </tr>
+    <tr>
+      <td>3/week</td>
+      <td>$1,100</td>
+      <td>$145</td>
+      <td>$1,035</td>
+{{!--       <td>$1,665</td>
+      <td>$290</td>
+      <td>$1,620</td> --}}
+    </tr>
+    <tr>
+{{!--       <td>2/week (PSEO commuters only)</td>
+      <td>-</td>
+      <td>-</td>
+      <td>-</td> --}}
+{{!--       <td>$1,215</td>
+      <td>$130</td>
+      <td>$1,215</td> --}}
+    </tr>
+    <tr>
+      <td>Flex only</td>
+      <td>$515</td>
+      <td>$100</td>
+      <td>$500</td>
+{{!--       <td>-</td>
+      <td>-</td>
+      <td>-</td> --}}
+    </tr>
+  </tbody>
+</table>
+
+<table border="0" class="responsive">
+<caption>Total Cost</caption>
+<thead>
+{{!--     <tr>
+      
+      <td align="center" colspan="3"><strong>Flex (Included)</strong></td>
+      <td align="center" colspan="3"><strong>Cost/Semester</strong></td>
+    </tr>
+ --}}    <tr>
+      <th align="center"><strong>Meals</strong></th>
+{{!--       <th>Fall</th>
+      <th>Interim</th>
+      <th>Spring</th> --}}
+      <th>Fall</th>
+      <th>Interim</th>
+      <th>Spring</th>
+    </tr>
+    </thead>
+  <tbody>
+    <tr>
+      <td>20/week</td>
+{{!--       <td>$50</td>
+      <td>$10</td>
+      <td>$45</td> --}}
+      <td>$1,940</td>
+      <td>$365</td>
+      <td>$1,875</td>
+    </tr>
+    <tr>
+      <td>15/week</td>
+ {{!--      <td>$150</td>
+      <td>$20</td>
+      <td>$130</td> --}}
+      <td>$1,940</td>
+      <td>$365</td>
+      <td>$1,875</td>
+    </tr>
+    <tr>
+      <td>125/Semester</td>
+{{!--       <td>$150</td>
+      <td>$20</td>
+      <td>$150</td> --}}
+      <td>$1,795</td>
+      <td>$340</td>
+      <td>$1,795</td>
+    </tr>
+    <tr>
+      <td>10/week</td>
+{{!--       <td>$225</td>
+      <td>$40</td>
+      <td>$200</td> --}}
+      <td>$1,770</td>
+      <td>$325</td>
+      <td>$1,710</td>
+    </tr>
+    <tr>
+      <td>6/week</td>
+{{!--       <td>$540</td>
+      <td>$100</td>
+      <td>$520</td> --}}
+      <td>$1,665</td>
+      <td>$290</td>
+      <td>$1,620</td>
+    </tr>
+    <tr>
+      <td>3/week</td>
+{{!--       <td>$1,100</td>
+      <td>$145</td>
+      <td>$1,035</td> --}}
+      <td>$1,665</td>
+      <td>$290</td>
+      <td>$1,620</td>
+    </tr>
+    <tr>
+      <td>2/week (PSEO commuters only)</td>
+{{!--       <td>-</td>
+      <td>-</td>
+      <td>-</td> --}}
+      <td>$1,215</td>
+      <td>$130</td>
+      <td>$1,215</td>
+    </tr>
+
+  </tbody>
+</table>
