adding fix for js rotation bit

--- a/src/templates/partials/table.hbs
+++ b/src/templates/partials/table.hbs
@@ -1,6 +1,111 @@
 <table class="responsive">
 	<thead>
 		<tr>
+			<th>New Staff Training Courses</th>
+			<th>Semester Credits</th>
+			<th>Bethel Seminary Equivalents</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Inductive Bible Study Methods</td>
+			<td>1</td>
+			<td>BT Elective Credit</td>
+		</tr>
+		<tr>
+			<td>Bible Interpretation</td>
+			<td>1</td>
+			<td>BT Elective Credit</td>
+		</tr>
+		<tr>
+			<td>Biblical Communication</td>
+			<td>1</td>
+			<td>CP Elective Credit</td>
+		</tr>
+		<tr>
+			<td>Church History</td>
+			<td>1</td>
+			<td>HS Elective Credit</td>
+		</tr>
+		<tr>
+			<td>New Testament Survey</td>
+			<td>1</td>
+			<td>NT Elective Credit</td>
+		</tr>
+		<tr>
+			<td>Old Testament Survey</td>
+			<td>1</td>
+			<td>OT Elective Credit</td>
+		</tr>
+		<tr>
+			<td>God/Bible/Holy Spirit</td>
+			<td>1</td>
+			<td>TS Elective Credit</td>
+		</tr>
+		<tr>
+			<td>Humanity/Christology/Salvation</td>
+			<td>1</td>
+			<td>TS Elective Credit</td>
+		</tr>
+		<tr>
+			<td>Doctrine Survey</td>
+			<td>1</td>
+			<td>TS Elective Credit</td>
+		</tr>
+		<tr>
+			<td>Apologetics</td>
+			<td>1</td>
+			<td>PH Elective Credit</td>
+		</tr>
+	</tbody>
+</table>
+
+<table class="responsive">
+	<thead>
+		<tr>
+			<th>Meal type</th>
+			<th>Student paying with flex</th>
+			<th>Student without meal plan or guest</th>
+			<th>Children ages 4-11</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Breakfast</td>
+			<td>$5.32</td>
+			<td>$5.32</td>
+			<td>$2.52</td>
+		</tr>
+		<tr>
+			<td>Lunch</td>
+			<td>$9.19</td>
+			<td>$9.80</td>
+			<td>$4.20</td>
+		</tr>
+		<tr>
+			<td>Dinner</td>
+			<td>$11.16</td>
+			<td>$11.16</td>
+			<td>$5.41</td>
+		</tr>
+		<tr>
+			<td>Saturday brunch</td>
+			<td>$9.90</td>
+			<td>$9.94</td>
+			<td>$4.85</td>
+		</tr>
+		<tr>
+			<td>Special event</td>
+			<td>$12.10</td>
+			<td>$13.02</td>
+			<td>$6.67</td>
+		</tr>
+	</tbody>
+</table>
+
+<table class="responsive">
+	<thead>
+		<tr>
 			<th>Course Title</th>
 			<th>Status</th>
 			<th>Semester Credits</th>
@@ -142,21 +247,13 @@
 
 
 <table border="0" class="responsive mb2">
-<caption>Flex dollars</captions>
+<caption>Flex (Included)</captions>
 <thead>
-{{!--     <tr>
-      
-      <td align="center" colspan="3"><strong>Flex (Included)</strong></td>
-      <td align="center" colspan="3"><strong>Cost/Semester</strong></td>
-    </tr>
- --}}    <tr>
+   <tr>
       <th align="center"><strong>Meals</strong></th>
       <th>Fall</th>
       <th>Interim</th>
       <th>Spring</th>
-{{!--       <th>Fall</th>
-      <th>Interim</th>
-      <th>Spring</th> --}}
     </tr>
     </thead>
   <tbody>
@@ -171,80 +268,45 @@
       <td>$150</td>
       <td>$20</td>
       <td>$130</td>
-{{!--       <td>$1,940</td>
-      <td>$365</td>
-      <td>$1,875</td> --}}
     </tr>
     <tr>
       <td>125/Semester</td>
       <td>$150</td>
       <td>$20</td>
       <td>$150</td>
-{{!--       <td>$1,795</td>
-      <td>$340</td>
-      <td>$1,795</td> --}}
     </tr>
     <tr>
       <td>10/week</td>
       <td>$225</td>
       <td>$40</td>
       <td>$200</td>
-{{!--       <td>$1,770</td>
-      <td>$325</td>
-      <td>$1,710</td> --}}
     </tr>
     <tr>
       <td>6/week</td>
       <td>$540</td>
       <td>$100</td>
       <td>$520</td>
-{{!--       <td>$1,665</td>
-      <td>$290</td>
-      <td>$1,620</td> --}}
     </tr>
     <tr>
       <td>3/week</td>
       <td>$1,100</td>
       <td>$145</td>
       <td>$1,035</td>
-{{!--       <td>$1,665</td>
-      <td>$290</td>
-      <td>$1,620</td> --}}
-    </tr>
-    <tr>
-{{!--       <td>2/week (PSEO commuters only)</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td> --}}
-{{!--       <td>$1,215</td>
-      <td>$130</td>
-      <td>$1,215</td> --}}
     </tr>
     <tr>
       <td>Flex only</td>
       <td>$515</td>
       <td>$100</td>
       <td>$500</td>
-{{!--       <td>-</td>
-      <td>-</td>
-      <td>-</td> --}}
     </tr>
   </tbody>
 </table>
 
 <table border="0" class="responsive">
-<caption>Total Cost</caption>
+<caption>Cost/Semester</caption>
 <thead>
-{{!--     <tr>
-      
-      <td align="center" colspan="3"><strong>Flex (Included)</strong></td>
-      <td align="center" colspan="3"><strong>Cost/Semester</strong></td>
-    </tr>
- --}}    <tr>
+   <tr>
       <th align="center"><strong>Meals</strong></th>
-{{!--       <th>Fall</th>
-      <th>Interim</th>
-      <th>Spring</th> --}}
       <th>Fall</th>
       <th>Interim</th>
       <th>Spring</th>
@@ -253,63 +315,42 @@
   <tbody>
     <tr>
       <td>20/week</td>
-{{!--       <td>$50</td>
-      <td>$10</td>
-      <td>$45</td> --}}
       <td>$1,940</td>
       <td>$365</td>
       <td>$1,875</td>
     </tr>
     <tr>
       <td>15/week</td>
- {{!--      <td>$150</td>
-      <td>$20</td>
-      <td>$130</td> --}}
       <td>$1,940</td>
       <td>$365</td>
       <td>$1,875</td>
     </tr>
     <tr>
       <td>125/Semester</td>
-{{!--       <td>$150</td>
-      <td>$20</td>
-      <td>$150</td> --}}
       <td>$1,795</td>
       <td>$340</td>
       <td>$1,795</td>
     </tr>
     <tr>
       <td>10/week</td>
-{{!--       <td>$225</td>
-      <td>$40</td>
-      <td>$200</td> --}}
       <td>$1,770</td>
       <td>$325</td>
       <td>$1,710</td>
     </tr>
     <tr>
       <td>6/week</td>
-{{!--       <td>$540</td>
-      <td>$100</td>
-      <td>$520</td> --}}
       <td>$1,665</td>
       <td>$290</td>
       <td>$1,620</td>
     </tr>
     <tr>
       <td>3/week</td>
-{{!--       <td>$1,100</td>
-      <td>$145</td>
-      <td>$1,035</td> --}}
       <td>$1,665</td>
       <td>$290</td>
       <td>$1,620</td>
     </tr>
     <tr>
       <td>2/week (PSEO commuters only)</td>
-{{!--       <td>-</td>
-      <td>-</td>
-      <td>-</td> --}}
       <td>$1,215</td>
       <td>$130</td>
       <td>$1,215</td>
