--- a/src/templates/partials/table.hbs
+++ b/src/templates/partials/table.hbs
@@ -201,6 +201,130 @@
 	</tbody>
 </table>
 
+<table border="0" class="responsive">
+	<tbody>
+		<tr>
+			<th scope="col" data-th="">
+			</th><th scope="col" data-th="Perkins Loans">Perkins Loans</th>
+			<th scope="col" data-th="Direct Subsidized Loans">Direct Subsidized Loans</th>
+			<th scope="col" data-th="Direct Unsubsidized Loans">Direct Unsubsidized Loans</th>
+			<th scope="col" data-th="Direct PLUS Loans">Direct PLUS Loans</th>
+			<th scope="col" data-th="Private Loans">Private Loans</th>
+		</tr>
+		<tr>
+			<th scope="rowgroup" data-th="">Borrower</th>
+			<td data-th="Perkins Loans">Student</td>
+			<td data-th="Direct Subsidized Loans">Student</td>
+			<td data-th="Direct Unsubsidized Loans">Student</td>
+			<td data-th="Direct PLUS Loans">Parent</td>
+			<td data-th="Private Loans">Student (often requires credit-worthy cosigner)</td>
+		</tr>
+		<tr>
+			<th scope="rowgroup" data-th="">Fees</th>
+			<td data-th="Perkins Loans">None</td>
+			<td data-th="Direct Subsidized Loans">
+				<p>1.073%</p>
+			</td>
+			<td data-th="Direct Unsubsidized Loans">
+				<p>1.073%</p>
+			</td>
+			<td data-th="Direct PLUS Loans">
+				<p>4.292%</p>
+			</td>
+			<td data-th="Private Loans">Varies</td>
+		</tr>
+		<tr>
+			<th scope="rowgroup" data-th="">Make payments while in school?</th>
+			<td data-th="Perkins Loans">No</td>
+			<td data-th="Direct Subsidized Loans">No</td>
+			<td data-th="Direct Unsubsidized Loans">Interest accrues. Optional in-school payment.</td>
+			<td data-th="Direct PLUS Loans">Yes</td>
+			<td data-th="Private Loans">Interest accrues. Some require interest payments while in school.</td>
+		</tr>
+		<tr>
+			<th scope="rowgroup" data-th="">Interest rate</th>
+			<td data-th="Perkins Loans">5.0% fixed</td>
+			<td data-th="Direct Subsidized Loans">
+				<p>4.66% fixed</p>
+			</td>
+			<td data-th="Direct Unsubsidized Loans">
+				<p>4.66% fixed</p>
+			</td>
+			<td data-th="Direct PLUS Loans">
+				<p>7.21%</p>
+			</td>
+			<td data-th="Private Loans">Varies</td>
+		</tr>
+		<tr>
+			<th scope="rowgroup" data-th="">Repayment</th>
+			<td data-th="Perkins Loans">Up to 10 years</td>
+			<td data-th="Direct Subsidized Loans">Up to 10 years</td>
+			<td data-th="Direct Unsubsidized Loans">Up to 10 years</td>
+			<td data-th="Direct PLUS Loans">Up to 10 years</td>
+			<td data-th="Private Loans">Varies (10+ years)</td>
+		</tr>
+		<tr>
+			<th scope="rowgroup" data-th="">Bethel's advice</th>
+			<td data-th="Perkins Loans">1<sup>st</sup> choice</td>
+			<td data-th="Direct Subsidized Loans">2<sup>nd</sup> choice</td>
+			<td data-th="Direct Unsubsidized Loans">3<sup>rd</sup> choice</td>
+			<td data-th="Direct PLUS Loans">Compare benefits to see if it's the best option.</td>
+			<td data-th="Private Loans">Compare benefits of each to find the best option.</td>
+		</tr>
+		<tr>
+			<th scope="rowgroup" data-th="">More info</th>
+			<td data-th="Perkins Loans"><a href="https://www.bethel.edu/undergrad/financial-aid/types/loans/index#perkins">Perkins Loans</a></td>
+			<td data-th="Direct Subsidized Loans"><a href="https://www.bethel.edu/undergrad/financial-aid/types/loans/index#sub-unsub">Subsidized Loans</a></td>
+			<td data-th="Direct Unsubsidized Loans"><a href="https://www.bethel.edu/undergrad/financial-aid/types/loans/index#sub-unsub">Unsubsidized Loans</a></td>
+			<td data-th="Direct PLUS Loans"><a href="https://www.bethel.edu/undergrad/financial-aid/types/loans/index#parent-plus">PLUS Loans</a></td>
+			<td data-th="Private Loans"><a href="https://www.bethel.edu/undergrad/financial-aid/types/loans/index#private">Private Loans</a></td>
+		</tr>
+	</tbody>
+</table>
+
+<table border="0" class="responsive mb2">
+	<caption>Loan Information</caption>
+	<thead>
+		<tr>
+			<th>Loan Type</th>
+			<th>Fees</th>
+			<th>Make payments while in school?</th>
+			<th>Interest rate</th>
+			<th>Repayment</th>
+			<th>More info</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Direct Unsubsidized Loans</td>
+			<td>1.051% (after 7/1/2013)</td>
+			<td>Interest accrues. Optional in-school payment.</td>
+			<td>6.21% fixed (first disbursed 7/1/2014 - 6/30/2015)</td>
+			<td>10 years</td>
+			<td><a href="https://www.bethel.edu/graduate/financial-aid/types/loans/index#unsub">Unsubsidized Loans</a></td>
+
+		</tr>
+		<tr>
+			<td>Direct PLUS Loans</td>
+			<td>4.204% (after 7/1/2013)</td>
+			<td>Yes</td>
+			<td>7.21% fixed (first disbursed 7/1/2014 - 6/30/2015)</td>
+			<td>10 years</td>
+			<td><a href="https://www.bethel.edu/graduate/financial-aid/types/loans/index#grad-plus">PLUS Loans</a></td>
+
+		</tr>
+		<tr>
+			<td>Private Loans</td>
+			<td>Varies</td>
+			<td>Yes</td>
+			<td>Varies</td>
+			<td>Varies (10+ years)</td>
+			<td><a href="https://www.bethel.edu/graduate/financial-aid/types/loans/index#private">Private Loans</a></td>
+
+		</tr>
+	</tbody>
+</table>
+
 <table border="0" class="responsive mb2">
 	<caption>Loan Information</caption>
 	<thead>
