--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -18,12 +18,14 @@
 
 "global/header",
 "global/toolbox",
+"global/off-canvas--global",
 "global/navigation",
 "global/breadcrumb",
 "global/footer",
 
 "school/school__navigation",
 
+"site/off-canvas--site",
 "site/site__title",
 "site/site__features",
 "site/site__image-bank",
@@ -50,8 +52,6 @@
 "enhance/big-steps",
 "enhance/buttons",
 "enhance/date-tag",
-"enhance/off-canvas2",
-"enhance/off-canvas--main",
 "enhance/parallax",
 "enhance/proof-points",
 "enhance/quotes",
@@ -61,5 +61,6 @@
 "enhance/odometer",
 "enhance/alerts",
 
+"enhance/clean-up",
 "base/utils"
 ;
