--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -20,7 +20,7 @@ layout:default
 		{{!-- {{> school__navigation }} --}}
 
 		{{!-- {{> carousel }} --}}
-		{{!-- {{> moving-picture }} --}}
+		{{> moving-picture }}
 
 
 		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
@@ -53,7 +53,7 @@ layout:default
 	      else window.addEventListener('load', cb);
 	</script>
 
-	<script src="/js/bundle.js" type="text/javascript" async=""></script>
+	<script src="https://cdn1.bethel.edu/js/bundle.js" type="text/javascript" async=""></script>
 
 	<script>
 		  // var cb = function() {
