--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -7,7 +7,7 @@ layout: default
 
     {{!-- {{> proof-points }} --}}
     {{!-- {{> quotes }} --}}
-    {{> collapsible }}
+    {{!-- {{> collapsible }} --}}
     {{!-- <img src="//fillmurray.com/800/350">    --}}
 
 
