moving off canvas button js to bundle.js

--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -4,7 +4,7 @@
 "variables",
 "mixins",
 
-"base/normalize",
+// "base/normalize",
 "base/base",
 "base/fluidity",
 // "base/space",
@@ -45,7 +45,7 @@
 // "enhance/carousel",
 
 // "modules/flickity",
-// "modules/flickity-custom",
+"modules/flickity-custom"
 
 // "enhance/accordion",
 // "enhance/animation",
@@ -62,5 +62,5 @@
 // "enhance/alerts",
 
 // "enhance/clean-up",
-"base/utils"
+// "base/utils"
 ;
