--- a/src/scss/enhance/_animation.scss
+++ b/src/scss/enhance/_animation.scss
@@ -43,3 +43,97 @@
 // .js-wordAnimate {
 //   animation-name: slideUpFadeIn;
 // }
+
+
+#circularG{
+position:relative;
+width:32px;
+height:32px}
+
+.circularG{
+position:absolute;
+background-color:#0069AA;
+width:7px;
+height:7px;
+border-radius:5px;
+animation-name:bounce_circularG;
+animation-duration:0.8s;
+animation-iteration-count:infinite;
+animation-direction:normal;
+}
+
+#circularG_1{
+left:0;
+top:13px;
+animation-delay:0.3s;
+}
+
+#circularG_2{
+left:3px;
+top:3px;
+animation-delay:0.4s;
+}
+
+#circularG_3{
+top:0;
+left:13px;
+animation-delay:0.5s;
+}
+
+#circularG_4{
+right:3px;
+top:3px;
+animation-delay:0.6s;
+}
+
+#circularG_5{
+right:0;
+top:13px;
+animation-delay:0.7s;
+}
+
+#circularG_6{
+right:3px;
+bottom:3px;
+animation-delay:0.8s;
+}
+
+#circularG_7{
+left:13px;
+bottom:0;
+animation-delay:0.9s;
+}
+
+#circularG_8{
+left:3px;
+bottom:3px;
+animation-delay:1s;
+}
+
+@keyframes bounce_circularG{
+0%{
+transform:scale(1)}
+
+100%{
+transform:scale(.3)}
+
+}
+
+<div id="circularG">
+  <div id="circularG_1" class="circularG">
+  </div>
+  <div id="circularG_2" class="circularG">
+  </div>
+  <div id="circularG_3" class="circularG">
+  </div>
+  <div id="circularG_4" class="circularG">
+  </div>
+  <div id="circularG_5" class="circularG">
+  </div>
+  <div id="circularG_6" class="circularG">
+  </div>
+  <div id="circularG_7" class="circularG">
+  </div>
+  <div id="circularG_8" class="circularG">
+  </div>
+</div>
