--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -20,7 +20,7 @@ layout:default
 		{{!-- {{> school__navigation }} --}}
 
 		{{!-- {{> carousel }} --}}
-		{{> moving-picture }}
+		{{!-- {{> moving-picture }} --}}
 
 
 		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
@@ -42,18 +42,18 @@ layout:default
 	</div>
 
 	<script>
-	      var cb = function() {
-	        var l = document.createElement('link'); l.rel = 'stylesheet';
-	        l.href = '/css/fizz.css';
-	        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
-	      };
-	      var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-	          webkitRequestAnimationFrame || msRequestAnimationFrame;
-	      if (raf) raf(cb);
-	      else window.addEventListener('load', cb);
+	      // var cb = function() {
+	      //   var l = document.createElement('link'); l.rel = 'stylesheet';
+	      //   l.href = '/css/fizz.css';
+	      //   var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+	      // };
+	      // var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+	      //     webkitRequestAnimationFrame || msRequestAnimationFrame;
+	      // if (raf) raf(cb);
+	      // else window.addEventListener('load', cb);
 	</script>
 
-	<script src="https://cdn1.bethel.edu/js/bundle.js" type="text/javascript" async=""></script>
+	<script src="/js/bundle.js" type="text/javascript" async=""></script>
 
 	<script>
 		  // var cb = function() {
