--- a/src/scss/base/_tables.scss
+++ b/src/scss/base/_tables.scss
@@ -38,7 +38,7 @@ table.responsive {
 
 table.responsive td, 
 table.responsive th { 
-  overflow: scroll;
+  overflow: auto;
 }
 
 @media screen and (max-width: 600px) {
