--- a/src/scss/site/_site__image-bank.scss
+++ b/src/scss/site/_site__image-bank.scss
@@ -37,7 +37,7 @@
 .turts {
 	// position: absolute;
 	bottom: 0;
-	background: rgba(#000,.55);
+	background: rgba(0,0,0,.55);
 	// display: table;
 	width: 100%;
 	height: 100%;
@@ -124,7 +124,7 @@
 	color: #fff;
 	// color: $bethel--blue;
 	// color: $bethel--yellow;
-	// background: rgba(#000,.45);
+	// background: rgba(0,0,0,.45);
 	font-size: 1.5rem;
 	// font-weight: 300;
 	// height: 100%;
