--- a/src/css/grid/_flex-grid.css
+++ b/src/css/grid/_flex-grid.css
@@ -172,3 +172,180 @@ $add-legacy-support: false !default;
 }
 
 
+@define-mixin grid-sizing $(name: "") {
+    $sep: "-";
+    @if $name == "" {
+        $sep: "";
+    }
+    .$(name)$(sep)grid--fit > .grid-cell {flex-basis: 1;}
+    .$(name)$(sep)grid--full > .grid-cell {flex-basis: 100%;}
+    .$(name)$(sep)grid--1-2 > .grid-cell {flex-basis: 50%;}
+    .$(name)$(sep)grid--1-3 > .grid-cell {flex-basis: 33.3333%;}
+    .$(name)$(sep)grid--1-4 > .grid-cell {flex-basis: 25%;}
+}
+
+/* Build the grid system*/
+
+@mixin grid-sizing();
+
+@each $breakpoint in $breakpoints {
+    $name: nth$(breakpoint, 1);
+    $size: nth$(breakpoint, 2);
+    @media only screen and $(size){
+        @mixin grid-sizing $(name));
+    }
+}
+
+/* For Old IE*/
+@if $add-legacy-support {
+.grid--full > .grid-cell {width: 100%}
+}
+
+@define-mixin grid-pad $(name: "") {
+    $sep: "-";
+    @if $name == "" {
+        $sep: "";
+    }
+    .$(name)$(sep)grid-pad-\.5x {padding: .5em;}
+    .$(name)$(sep)grid-pad-1x {padding: 1em;}
+    .$(name)$(sep)grid-pad-1\.5x {padding: 1.5em;}
+    .$(name)$(sep)grid-pad-2x {padding: 2em;}
+    .$(name)$(sep)grid-pad-3x {padding: 3em;}
+
+    /* IF .grid--full is applied, remove the vertical padding between the stacked cells*/
+    .grid--full .$(name)$(sep)grid-pad-\.5x {padding: 0 .5em;}
+    .grid--full .$(name)$(sep)grid-pad-1x {padding: 0 1em;}
+    .grid--full .$(name)$(sep)grid-pad-1\.5x {padding: 0 1.5em;}
+    .grid--full .$(name)$(sep)grid-pad-2x {padding: 0 2em;}
+    .grid--full .$(name)$(sep)grid-pad-3x {padding: 0 3em;}
+}
+
+@mixin grid-pad();
+
+@if $add-legacy-support != true {
+  @each $breakpoint in $breakpoints {
+      $name: nth$(breakpoint, 1);
+      $size: nth$(breakpoint, 2);
+      @media only screen and $(size){
+          @mixin grid-pad $(name);
+      }
+  }
+}
+
+@if $add-legacy-support == true {
+  @each $breakpoint in $breakpoints {
+      $name: nth$(breakpoint, 1);
+      $size: nth$(breakpoint, 2);
+        @mixin grid-pad $(name);
+  }
+}
+
+  @define-mixin sizes $(name: "") {
+    $sep: "-";
+    @if $name == "" {
+      $sep: "";
+    }
+
+    @if $add-legacy-support != true{
+      .u-$(name)$(sep)1-12  {flex-basis: 8.33333%;flex-grow:0;}
+      .u-$(name)$(sep)2-12,
+      .u-$(name)$(sep)1-6  {flex-basis: 16.66667%;flex-grow:0;}
+      .u-$(name)$(sep)1-5   {flex-basis: 20%;flex-grow:0;}
+      .u-$(name)$(sep)3-12,
+      .u-$(name)$(sep)1-4  {flex-basis: 25%;flex-grow:0;}
+      .u-$(name)$(sep)4-12,
+      .u-$(name)$(sep)2-6,
+      .u-$(name)$(sep)1-3  {flex-basis: 33.33333%;flex-grow:0;}
+      .u-$(name)$(sep)2-5   {flex-basis: 40%;flex-grow:0;}
+      .u-$(name)$(sep)5-12  {flex-basis: 41.66667%;flex-grow:0;}
+      .u-$(name)$(sep)6-12,
+      .u-$(name)$(sep)3-6
+      .u-$(name)$(sep)2-4,
+      .u-$(name)$(sep)1-2  {flex-basis: 50%;flex-grow:0;}
+      .u-$(name)$(sep)7-12  {flex-basis: 58.33333%;flex-grow:0;}
+      .u-$(name)$(sep)3-5   {flex-basis: 60%;flex-grow:0;}
+      .u-$(name)$(sep)8-12,
+      .u-$(name)$(sep)2-3,
+      .u-$(name)$(sep)4-6  {flex-basis: 66.66667%;flex-grow:0;}
+      .u-$(name)$(sep)9-12,
+      .u-$(name)$(sep)3-4  {flex-basis: 75%;flex-grow:0;}
+      .u-$(name)$(sep)4-5   {flex-basis: 80%;flex-grow:0;}
+      .u-$(name)$(sep)10-12,
+      .u-$(name)$(sep)5-6 {flex-basis: 83.33333%;flex-grow:0;}
+      .u-$(name)$(sep)11-12 {flex-basis: 91.66667%;flex-grow:0;}
+      .u-$(name)$(sep)12-12,
+      .u-$(name)$(sep)6-6,
+      .u-$(name)$(sep)5-5,
+      .u-$(name)$(sep)4-4,
+      .u-$(name)$(sep)3-3,
+      .u-$(name)$(sep)2-2,
+      .u-$(name)$(sep)1-1   {flex-basis: 100%;flex-grow:0;}
+    };
+  }
+
+  /* create global sizes*/
+  @mixin sizes();
+
+  /* create sizes for each breakpoint*/
+  @each $breakpoint in $breakpoints {
+      $name: nth$(breakpoint, 1);
+      $size: nth$(breakpoint, 2);
+      @media only screen and $(size){
+          @mixin sizes $(name);
+      }
+  }
+
+  @define-mixin sizes $(name: "") {
+    $sep: "-";
+    @if $name == "" {
+      $sep: "";
+    }
+
+    @if $add-legacy-support == true{
+      .u-$(name)$(sep)1-12{width: 8.33%;}
+      .u-$(name)$(sep)2-12,
+      .u-$(name)$(sep)1-6{width: 16.67%;}
+      .u-$(name)$(sep)1-5{width: 20%;}
+      .u-$(name)$(sep)3-12,
+      .u-$(name)$(sep)1-4{width: 25%;}
+      .u-$(name)$(sep)4-12,
+      .u-$(name)$(sep)2-6,
+      .u-$(name)$(sep)1-3  {width: 33.33%;}
+      .u-$(name)$(sep)2-5   {width: 40%;}
+      .u-$(name)$(sep)5-12  {width: 41.67%;}
+      .u-$(name)$(sep)6-12,
+      .u-$(name)$(sep)3-6
+      .u-$(name)$(sep)2-4,
+      .u-$(name)$(sep)1-2  {width: 50%;}
+      .u-$(name)$(sep)7-12  {width: 58.33%;}
+      .u-$(name)$(sep)3-5   {width: 60%;}
+      .u-$(name)$(sep)8-12,
+      .u-$(name)$(sep)2-3,
+      .u-$(name)$(sep)4-6  {width: 66.67%;}
+      .u-$(name)$(sep)9-12,
+      .u-$(name)$(sep)3-4  {width: 75%;}
+      .u-$(name)$(sep)4-5   {width: 80%;}
+      .u-$(name)$(sep)10-12,
+      .u-$(name)$(sep)5-6 {width: 83.33%;}
+      .u-$(name)$(sep)11-12 {width: 91.67%;}
+      .u-$(name)$(sep)12-12,
+      .u-$(name)$(sep)6-6,
+      .u-$(name)$(sep)5-5,
+      .u-$(name)$(sep)4-4,
+      .u-$(name)$(sep)3-3,
+      .u-$(name)$(sep)2-2,
+      .u-$(name)$(sep)1-1   {width: 100%;}
+    };
+  }
+
+  /* create global sizes*/
+  @mixin sizes();
+
+  /* create sizes for each breakpoint*/
+  @each $breakpoint in $breakpoints {
+      $name: nth$(breakpoint, 1);
+      $size: nth$(breakpoint, 2);
+        @mixin sizes $(name);
+  }
+
+
