--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -35,7 +35,7 @@
 "modules/maps",
 "modules/calendar",
 "modules/news",
-"modules/search",
+// "modules/search",
 "modules/social-media",
 "modules/moving-picture",
 "modules/section--home",
