--- a/src/css/base/_mixins.css
+++ b/src/css/base/_mixins.css
@@ -1,6 +1,6 @@
 @define-mixin respond-min $width {
-  @media only screen and (min-width: $width) {@content;}
+  @media only screen and (min-width: $width) {@mixin-content;}
 }
 @define-mixin respond-max $width {
-  @media only screen and (max-width: $width) {@content;}
+  @media only screen and (max-width: $width) {@mixin-content;}
 }
