--- a/src/scss/modules/_pikaday.scss
+++ b/src/scss/modules/_pikaday.scss
@@ -18,7 +18,7 @@ $font_2: Arial;
 $font_3: sans-serif;
 
 //data-uris
-$data_uri_0: "";
+$data_uri_0: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAeCAYAAAAsEj5rAAAAUklEQVR42u3VMQoAIBADQf8Pgj+OD9hG2CtONJB2ymQkKe0HbwAP0xucDiQWARITIDEBEnMgMQ8S8+AqBIl6kKgHiXqQqAeJepBo/z38J/U0uAHlaBkBl9I4GwAAAABJRU5ErkJggg==";
 $data_uri_1: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAeCAYAAAAsEj5rAAAAU0lEQVR42u3VOwoAMAgE0dwfAnNjU26bYkBCFGwfiL9VVWoO+BJ4Gf3gtsEKKoFBNTCoCAYVwaAiGNQGMUHMkjGbgjk2mIONuXo0nC8XnCf1JXgArVIZAQh5TKYAAAAASUVORK5CYII=";
 
 //@extend-elements
@@ -45,7 +45,7 @@ $data_uri_1: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAeCAYAAAAsEj5r
 	*top: 0;
 }
 
-//original selectors
+//original selectors -- I modified the background-image(caleb s)
 //.pika-prev, .is-rtl .pika-next
 %extend_2 {
 	float: left;
@@ -53,7 +53,7 @@ $data_uri_1: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAeCAYAAAAsEj5r
 	*left: 0;
 }
 
-//original selectors
+//original selectors -- I modified the background-image(caleb s)
 //.pika-next, .is-rtl .pika-prev
 %extend_3 {
 	float: right;
