--- a/src/css/enhance/_slick.css
+++ b/src/css/enhance/_slick.css
@@ -1,5 +1,5 @@
-// This css is copied from the 'slick-carousel' node_module package
-// It need to be manually updated until, node-sass allows css @imports
+/*// This css is copied from the 'slick-carousel' node_module package
+// It need to be manually updated until, node-sass allows css @imports*/
 /* Slider */
 
 .slick-slider {
