Updated css for search page

--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -1,5 +1,5 @@
 
-@import 
+@import
 
 "variables",
 "mixins",
@@ -35,7 +35,7 @@
 "modules/maps",
 "modules/calendar",
 "modules/news",
-// "modules/search",
+"modules/search",
 "modules/social-media",
 "modules/moving-picture",
 "modules/section--home",
@@ -57,8 +57,8 @@
 "enhance/proof-points",
 "enhance/quotes",
 "enhance/svg-icons",
-"enhance/image-hover", 
-"enhance/collapsible-block", 
+"enhance/image-hover",
+"enhance/collapsible-block",
 "enhance/odometer",
 "enhance/alerts",
 
