--- a/src/scss/enhance/_search.scss
+++ b/src/scss/enhance/_search.scss
@@ -1,3 +1,93 @@
+.gs-snippet {
+   padding-left: 8px;
+}
+
+
+.gsc-cursor-box.gs-bidi-start-align {
+   padding-top: 20px;
+}
+
+
+.gsc-result {
+   padding-bottom: 0px !important;
+   padding-top: 0px !important;
+}
+
+
+.gsc-selected-option-container.gsc-inline-block {
+   width: 90px !important;
+}
+
+
+.gsc-tabsArea {
+   border-bottom: none ;
+}
+
+
+.gsc-tabsArea>.gsc-tabHeader {
+   height: 30px;
+   width: 70px;
+}
+
+
+.gsib_a {
+   padding-left: 5px;
+}
+
+
+#___gcse_0 {
+   margin-bottom: 50px;
+}
+
+
+#gsc-iw-id1 {
+   height: 28px;
+}
+
+
+.gs-fileFormat {
+   padding-left: 8px;
+}
+
+
+.gs-image-box>a>img.gs-image {
+   height: 100% !important;
+}
+
+
+input#gsc-i-id1 {
+   box-shadow: none;
+   margin-top: 2px;
+}
+
+
+input.gsc-search-button-v2 {
+   height: 28px;
+   width: 70px;
+}
+
+
+span#gs_cb50 {
+   margin-top: 5px;
+}
+
+
+div#___gcse_0 table td {
+   border: none;
+   padding-top: 0px;
+   padding-bottom: 0px;
+}
+
+
+div.gsc-cursor-page.gsc-cursor-current-page {
+   text-decoration: none !important;
+}
+
+.gsc-thumbnail-inside {
+   font-size: 22px;
+   line-height: 22px;
+}
+
 .search {
 	// background: tomato;
 
@@ -39,7 +129,7 @@
 
 	.search-input {
 		// @include border-radius(.3em 0 0 .3em);
-		border-radius: .3em 0 0 .3em;	
+		border-radius: .3em 0 0 .3em;
 		// @include single-box-shadow(#aaa, inset, 0, 0, 7px);
 		// box-shadow: #aaa inset 0 0 7px;
 		// width: 70%;
