flickity clean up

--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -25,7 +25,7 @@
 
 // "school/school__navigation",
 
-"site/off-canvas--site",
+// "site/off-canvas--site",
 // "site/site__title",
 // "site/site__features",
 // "site/site__image-bank",
@@ -39,13 +39,13 @@
 // "modules/news",
 // "modules/search",
 // "modules/social-media",
-// "modules/moving-picture",
+"modules/moving-picture",
 // "modules/section--home",
 
 // "enhance/carousel",
 
-// "modules/flickity",
-"modules/flickity-custom"
+"modules/flickity",
+"modules/flickity-custom",
 
 // "enhance/accordion",
 // "enhance/animation",
@@ -62,5 +62,5 @@
 // "enhance/alerts",
 
 // "enhance/clean-up",
-// "base/utils"
+"base/utils"
 ;
