changing search.scss reference

--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -35,7 +35,6 @@
 "modules/maps",
 "modules/calendar",
 "modules/news",
-"modules/search",
 "modules/social-media",
 "modules/moving-picture",
 "modules/section--home",
@@ -46,6 +45,7 @@
 "modules/flickity",
 "modules/flickity-custom",
 
+"enhance/search",
 "enhance/accordion",
 "enhance/animation",
 "enhance/big-steps",
